# pwncat-vl

./: CHANGELOG.md  Dockerfile  README.md  pyproject.toml  run-tests.sh
.github/workflows/: publish.yml  python.yml
pwncat/: __main__.py  config.py  gtfobins.py  manager.py  util.py
pwncat/channel/: __init__.py  bind.py  socket.py  ssh.py  ssl_bind.py
pwncat/commands/: __init__.py  connect.py  download.py  remember.py
pwncat/data/pty_helper/: build.sh  pty_helper.c  pty_helper_aarch64  pty_helper_armv7l  pty_helper_i686  pty_helper_x86_64
pwncat/facts/: implant.py  linux.py  windows.py
pwncat/modules/: __init__.py  enumerate.py
pwncat/modules/agnostic/: implant.py  report.py
pwncat/modules/linux/enumerate/file/: caps.py
pwncat/modules/linux/enumerate/software/pkexec/: cve_2021_4034.py
pwncat/modules/linux/enumerate/software/screen/: cve_2017_5618.py
pwncat/modules/linux/enumerate/software/sudo/: cve_2025_32463.py  rules.py
pwncat/modules/linux/enumerate/system/: container.py  fstab.py  hosts.py  network.py  process.py  uname.py
pwncat/modules/linux/enumerate/user/: group.py
pwncat/modules/linux/implant/: authorized_key.py  pam.py
pwncat/modules/windows/: powersploit.py
pwncat/modules/windows/enumerate/protections/: __init__.py
pwncat/modules/windows/enumerate/user/: __init__.py
pwncat/platform/: linux.py  windows.py
tests/: conftest.py  test_compat.py  test_core.py  test_manager.py
