[tool.isort]
profile = "black"
length_sort = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
addopts = "-v"

[tool.poetry]
name = "pwncat-vl"
version = "0.6.0"
description = "Community-maintained fork of pwncat with Python 3.13+ support"
authors = ["Chocapikk <balgogan@protonmail.com>", "Caleb Stewart <caleb.stewart94@gmail.com>", "John Hammond"]
readme = "README.md"
repository = "https://github.com/Chocapikk/pwncat-vl"
documentation = "https://pwncat.readthedocs.io"
keywords = ["offsec", "cyber", "exploitation", "privesc", "automation", "redteam"]
packages = [
  { include = "pwncat" },
]
license = "MIT"

[tool.poetry.scripts]
pwncat-vl = "pwncat.__main__:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Chocapikk/pwncat-vl/issues"

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^6.0.0"
packaging = ">=23.0"
passlib = "^1.7.4"
prompt-toolkit = "^3.0.19"
pycryptodome = "^3.10.1"
requests = "^2.25.1"
rich = "^10.4.0"
python-rapidjson = "^1.0"
ZODB3 = "^3.11.0"
Jinja2 = "^3.0.1"
paramiko-ng = "^2.8.8"
PyNaCl = "^1.4.0"
sphinx-toolbox = { version = "^2.15.2", optional = true }
Sphinx = { version= "^4.0.2", optional = true }
enum-tools = { version= "^0.7.0", optional = true }
furo = { version= "^2021.11.23", optional = true }

[tool.poetry.group.dev.dependencies]
isort = "^5.8.0"
pytest = "^6.2.4"
flake8 = "^3.9.2"

[tool.poetry.extras]
docs = ["sphinx-toolbox", "Sphinx", "enum-tools", "furo"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
